--- a/client/.gitignore
+++ b/client/.gitignore
@@ -9,7 +9,7 @@
 /coverage
 
 # production
-/build
+ build
 
 # misc
 .DS_Store
@@ -21,6 +21,3 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-#.env
-.env
